# wa-wagtail

./: .coveragerc  .dockerignore  .eslintignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .stylelintrc.js  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  fabfile.py  gunicorn.conf.py  jest.config.js  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js  tsconfig.json  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
docker/: bashrc.sh
docs/: anonymised_data.md  continuous-integration.md  index.md  project_conventions.md  upgrading.md
docs/front-end/: placeholder_images.md  tooling.md
ukgwa/: constants.py  urls.py  wsgi.py
ukgwa/core/: apps.py  blocks.py  context_processors.py  mixins.py  pattern_contexts.py
ukgwa/core/migrations/: 0001_initial.py  0002_systemmessagessettings_active_alert_and_more.py
ukgwa/core/models/: base.py  mixins.py  settings.py  snippets.py
ukgwa/core/tests/: test_context_processors.py
ukgwa/home/: apps.py  factories.py  models.py
ukgwa/home/migrations/: 0001_initial.py  0002_create_homepage.py
ukgwa/images/: apps.py
ukgwa/images/migrations/: 0001_initial.py
ukgwa/images/templatetags/: image_tags.py
ukgwa/navigation/: apps.py  blocks.py  models.py
ukgwa/navigation/migrations/: 0001_initial.py  0002_alter_navigationsettings_footer_links_and_more.py  0003_remove_navigationsettings_footer_logo_cloud.py
ukgwa/navigation/templatetags/: navigation_tags.py
ukgwa/project_styleguide/: apps.py  yaml_extensions.py
ukgwa/project_styleguide/templates/: base.html  base.yaml  (+2 more)
ukgwa/settings/: base.py  dev.py  local.py.example  test.py
ukgwa/standardpages/: apps.py  models.py
ukgwa/users/: apps.py  wagtail_hooks.py
ukgwa/utils/: apps.py  views.py
(+144 files in other folders)
